--- a/gwlweb-server/pom.xml
+++ b/gwlweb-server/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version> <!-- 用最新稳定版即可 -->
+        </dependency>
     </dependencies>
 
     <build>
