--- a/gwlweb-server/src/main/resources/application-dev.yml
+++ b/gwlweb-server/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: du-consumer
   datasource:
-    url: jdbc:mysql://localhost:3306/gwlweb?useSSL=false&serverTimezone=Asia/Tokyo&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/gwlweb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Tokyo&characterEncoding=utf-8
     username: root
     password: 123456
 
@@ -22,7 +22,7 @@ dubbo:
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: entity
+  type-aliases-package: gwl.entity
   configuration:
     #开启驼峰命名
     map-underscore-to-camel-case: true
