--- a/gwlweb-server/src/main/resources/application-dev.yml
+++ b/gwlweb-server/src/main/resources/application-dev.yml
@@ -1,5 +1,8 @@
 server:
   port: 8080
+  tomcat:
+    max-swallow-size: 50MB
+    max-http-form-post-size: 50MB
 
 spring:
   application:
@@ -8,6 +11,21 @@ spring:
     url: jdbc:mysql://localhost:3306/gwlweb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Tokyo&characterEncoding=utf-8
     username: root
     password: 123456
+  servlet:
+    multipart:
+      max-file-size: -1
+      max-request-size: 100MB
+  kafka:
+    bootstrap-servers: 3.112.54.245:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      group-id: timeline-group
+      properties:
+        spring.json.trusted.packages: "*"
 
 springdoc:
   swagger-ui:
@@ -26,3 +44,10 @@ mybatis:
   configuration:
     #开启驼峰命名
     map-underscore-to-camel-case: true
+aws:
+  region: ap-northeast-1
+  accessKey: AKIAQIX273TDK6JUORMS
+  secretKey: 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
+  s3:
+    avatar: arn:aws:s3:ap-northeast-1:018779987142:accesspoint/access1
+  
