--- a/gwlweb-server/src/main/resources/application.yml
+++ b/gwlweb-server/src/main/resources/application.yml
@@ -1,7 +1,90 @@
-# server:
-#   port: 8080
+server:
+  port: 8080
+  tomcat:
+    max-swallow-size: 50MB
+    max-http-form-post-size: 50MB
 
 spring:
-  profiles:
-    active: dev
-  
+  application:
+    name: du-consumer
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/gwlweb?useSSL=false&serverTimezone=Asia/Tokyo&characterEncoding=utf8&allowPublicKeyRetrieval=true&allowMultiQueries=true
+    username: root
+    password: 123456
+
+  data:
+    redis:
+      host: valkey-snsgwl-gwlgwl6887-8905.j.aivencloud.com
+      port: 14044
+      username: default
+      password: AVNS_EmnbIl0tUmjNMwrDWnD
+      ssl:
+        enabled: true
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 1
+          max-wait: 5s
+
+  servlet:
+    multipart:
+      max-file-size: -1
+      max-request-size: 100MB
+
+  mail:
+    host: smtp.qq.com
+    port: 587
+    username: 475857172@qq.com
+    password: uoelcxrwaifmbhib
+    protocol: smtp
+    default-encoding: UTF-8
+    properties:
+      mail.smtp:
+        auth: true
+        starttls.enable: true
+
+  kafka:
+    bootstrap-servers: 43.207.139.9:19092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
+
+springdoc:
+  swagger-ui:
+    persistAuthorization: true
+
+dubbo:
+  application:
+    name: dubbo-consumer
+  registry:
+    address: localhost:2181
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: gwl.pojo.entity
+  configuration:
+    map-underscore-to-camel-case: true
+
+mybatis-plus:
+  global-config:
+    db-config:
+      ddl-auto: none
+
+aws:
+  s3:
+    region: ap-northeast-1
+    access-key: AKIAQIX273TDBONUSDOG
+    secret-key: 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
+    bucket: gwltest-01
+    url: https://gwltest-01.s3.ap-northeast-1.amazonaws.com/
+
+app:
+  mail:
+    sender-emailaddress: 475857172@qq.com
