--- a/gwlweb-server/src/main/resources/application.yml
+++ b/gwlweb-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
   tomcat:
     max-swallow-size: 50MB
-    max-http-form-post-size: 50MB
+    max-http-form-post-size: 50MB ////
 
 spring:
   application:
