--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ gwlweb-server/src/main/resources/application-localdev.yml
 gwlweb-server/src/main/resources/firebase-service-account.json
 
 gwlweb-server/src/main/resources/application.yml
+gwlweb-server/src/main/resources/application-prod.yml
