--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-gwlweb-server/src/main/resources/application-dev.yml
-gwlweb-server/src/main/resources/application-localdev.yml
-gwlweb-server/src/main/resources/firebase-service-account.json
-
 gwlweb-server/src/main/resources/firebase-service-account.json
 gwlweb-server/src/main/resources/*.yml
+gwlweb-server/.github/workflows/*.yml
