--- a/gwlweb-server/pom.xml
+++ b/gwlweb-server/pom.xml
@@ -21,7 +21,7 @@
         <zookeeper.version>3.8.1</zookeeper.version>
         <curator.version>5.2.1</curator.version>
         <mybatis.boot.version>3.0.3</mybatis.boot.version>
-        <mybatis.plus.version>3.5.3.2</mybatis.plus.version>
+        <mybatis.plus.version>3.5.6</mybatis.plus.version>
         <mysql.version>8.0.33</mysql.version>
         <jjwt.version>0.11.5</jjwt.version>
         <aws.sdk.version>2.27.20</aws.sdk.version>
@@ -81,11 +81,11 @@
             <artifactId>curator-x-discovery</artifactId>
             <version>${curator.version}</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.boot.version}</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
