--- a/gwlweb-server/pom.xml
+++ b/gwlweb-server/pom.xml
@@ -9,7 +9,7 @@
         <version>3.2.6</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.example</groupId>
+    <groupId>com.gwl</groupId>
     <artifactId>gwlweb-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gwlweb-server</name>
