--- a/gwlweb-server/pom.xml
+++ b/gwlweb-server/pom.xml
@@ -157,6 +157,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.gwl.GwlwebServerApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
